cmake_minimum_required(VERSION 3.16)
project(ngenmud C)

set(CMAKE_C_STANDARD 11)

find_package(PythonInterp 2.7 REQUIRED)
find_package(PythonLibs 2.7 REQUIRED)

include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(src)
include_directories(src/alias)
include_directories(src/dyn_vars)
include_directories(src/editor)
include_directories(src/help2)
include_directories(src/items)
include_directories(src/olc2)
include_directories(src/scripts)
include_directories(src/set_val)
include_directories(src/socials)
include_directories(src/time)

add_executable(ngenmud
        src/alias/alias.c
        src/alias/alias.h
        src/dyn_vars/dyn_vars.c
        src/dyn_vars/dyn_vars.h
        src/editor/editor.c
        src/editor/editor.h
        src/editor/notepad.c
        src/help2/hedit.c
        src/help2/hedit.h
        src/help2/help.c
        src/help2/help.h
        src/items/container.c
        src/items/container.h
        src/items/furniture.c
        src/items/furniture.h
        src/items/iedit.c
        src/items/iedit.h
        src/items/items.c
        src/items/items.h
        src/items/portal.c
        src/items/portal.h
        src/items/worn.c
        src/items/worn.h
        src/olc2/accedit.c
        src/olc2/bedit.c
        src/olc2/esedit.c
        src/olc2/medit.c
        src/olc2/oedit.c
        src/olc2/olc.c
        src/olc2/olc.h
        src/olc2/olc_extender.c
        src/olc2/olc_extender.h
        src/olc2/olc_submenus.h
        src/olc2/pcedit.c
        src/olc2/protedit.c
        src/olc2/redit.c
        src/olc2/zedit.c
        src/scripts/pyaccount.c
        src/scripts/pyaccount.h
        src/scripts/pyauxiliary.c
        src/scripts/pyauxiliary.h
        src/scripts/pychar.c
        src/scripts/pychar.h
        src/scripts/pyevent.c
        src/scripts/pyevent.h
        src/scripts/pyexit.c
        src/scripts/pyexit.h
        src/scripts/pyhooks.c
        src/scripts/pyhooks.h
        src/scripts/pymud.c
        src/scripts/pymud.h
        src/scripts/pymudsys.c
        src/scripts/pymudsys.h
        src/scripts/pyobj.c
        src/scripts/pyobj.h
        src/scripts/pyolc.c
        src/scripts/pyolc.h
        src/scripts/pyplugs.c
        src/scripts/pyplugs.h
        src/scripts/pyroom.c
        src/scripts/pyroom.h
        src/scripts/pysocket.c
        src/scripts/pysocket.h
        src/scripts/pystorage.c
        src/scripts/pystorage.h
        src/scripts/script_editor.c
        src/scripts/script_editor.h
        src/scripts/scripts.c
        src/scripts/scripts.h
        src/scripts/trigedit.c
        src/scripts/triggers.c
        src/scripts/trighooks.c
        src/scripts/trighooks.h
        src/set_val/set_val.c
        src/set_val/set_val.h
        src/socials/socedit.c
        src/socials/socedit.h
        src/socials/socials.c
        src/socials/socials.h
        src/time/mudtime.h
        src/time/time.c
        src/account.c
        src/account.h
        src/action.c
        src/action.h
        src/auxiliary.c
        src/auxiliary.h
        src/bitvector.c
        src/bitvector.h
        src/body.c
        src/body.h
        src/buffer.c
        src/buffer.h
        src/character.c
        src/character.h
        src/command.c
        src/command.h
        src/commands.h
        src/event.c
        src/event.h
        src/exit.c
        src/exit.h
        src/extra_descs.c
        src/extra_descs.h
        src/filebuf.c
        src/filebuf.h
        src/gameloop.c
        src/handler.c
        src/handler.h
        src/hashtable.c
        src/hashtable.h
        src/hooks.c
        src/hooks.h
        src/inform.c
        src/inform.h
        src/interpret.c
        src/io.c
        src/list.c
        src/list.h
        src/log.c
        src/log.h
        src/map.c
        src/map.h
        src/mccp.c
        src/mud.c
        src/mud.h
        src/near_map.c
        src/near_map.h
        src/numbers.c
        src/numbers.h
        src/object.c
        src/object.h
        src/parse.c
        src/parse.h
        src/property_table.c
        src/property_table.h
        src/prototype.c
        src/prototype.h
        src/races.c
        src/races.h
        src/room.c
        src/room.h
        src/room_reset.c
        src/room_reset.h
        src/save.c
        src/save.h
        src/set.c
        src/set.h
        src/socket.c
        src/socket.h
        src/storage.c
        src/storage.h
        src/string_utils.c
        src/strings.c
        src/strings.h
        src/utils.c
        src/utils.h
        src/world.c
        src/world.h
        src/wrapsock.h
        src/zone.c
        src/zone.h)

target_link_libraries(ngenmud C ${PYTHON_LIBRARIES} z)